# emphasoft_hotel

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
Hotel/: asgi.py  settings.py  urls.py  wsgi.py
bookings/: admin.py  exceptions.py  filters.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_bookings.py  0003_rename_bookings_booking.py  0004_room_is_empty.py  0005_auto_20260305_1031.py  0006_booking_prevent_double_booking.py
bookings/templates/: 404.html  base.html
bookings/templates/bookings/: book_room.html  my_bookings.html  room_list.html
bookings/templates/registration/: register.html
